# apistos

./: README.md
examples/petstore/: Cargo.toml
examples/petstore/src/: main.rs
examples/simple-todo/src/: main.rs
petstore/: Cargo.toml
petstore/src/: main.rs
simple-shuttle-rs/: Cargo.toml
simple-todo/src/: main.rs
uat/: Cargo.toml  main.rs
uat/.sqlx/: query-6033f0cf9599db879ee710bdcb9f864332077c38a94e3539e28a6aeba32dcbb8.json  query-69d418f1b3f410b05375ee17f2b325ad9d1bb8e60e4c2f8d4d0be5d9ea5acd59.json  query-973b8b458f55e172f4ab248494eb4703076941ebda9e620ba5994b6de7bf2283.json  query-a48bc4f6696f79799a0e521d8c11f724ad86b93f78478b3680e5740ce965e122.json  query-fa1fcd1799a5000e84e45514a7f7427e745f669d7b89053d040d75de2e539d48.json
uat/src/: api.rs  main.rs
